Upgrading to Oracle JDK 8